compiler-core/src/package_interface/snapshots/gleam_core__package_interface__tests__prelude_types.snap
---
source: compiler-core/src/package_interface/tests.rs
expression: "\npub const float = 1.1\npub const string = \"\"\npub const int = 1\npub const bool = True\n"
---
{
  "name": "my_package",
  "version": "11.10.9-1.wibble+build",
  "gleam-version-constraint": "1.0.0",
  "modules": {
    "my/module": {
      "documentation": [],
      "type-aliases": {},
      "types": {},
      "constants": {
        "bool": {
          "documentation": null,
          "deprecation": null,
          "implementations": {
            "gleam": true,
            "uses-erlang-externals": false,
            "uses-javascript-externals": false,
            "uses-webassembly-externals": false,
            "can-run-on-erlang": true,
            "can-run-on-javascript": true,
            "can-run-on-webassembly": true
          },
          "type": {
            "kind": "named",
            "name": "Bool",
            "package": "",
            "module": "gleam",
            "parameters": []
          }
        },
        "float": {
          "documentation": null,
          "deprecation": null,
          "implementations": {
            "gleam": true,
            "uses-erlang-externals": false,
            "uses-javascript-externals": false,
            "uses-webassembly-externals": false,
            "can-run-on-erlang": true,
            "can-run-on-javascript": true,
            "can-run-on-webassembly": true
          },
          "type": {
            "kind": "named",
            "name": "Float",
            "package": "",
            "module": "gleam",
            "parameters": []
          }
        },
        "int": {
          "documentation": null,
          "deprecation": null,
          "implementations": {
            "gleam": true,
            "uses-erlang-externals": false,
            "uses-javascript-externals": false,
            "uses-webassembly-externals": false,
            "can-run-on-erlang": true,
            "can-run-on-javascript": true,
            "can-run-on-webassembly": true
          },
          "type": {
            "kind": "named",
            "name": "Int",
            "package": "",
            "module": "gleam",
            "parameters": []
          }
        },
        "string": {
          "documentation": null,
          "deprecation": null,
          "implementations": {
            "gleam": true,
            "uses-erlang-externals": false,
            "uses-javascript-externals": false,
            "uses-webassembly-externals": false,
            "can-run-on-erlang": true,
            "can-run-on-javascript": true,
            "can-run-on-webassembly": true
          },
          "type": {
            "kind": "named",
            "name": "String",
            "package": "",
            "module": "gleam",
            "parameters": []
          }
        }
      },
      "functions": {}
    }
  }
}
